--- a/content/post/2020-11-02-influencing-distributions.Rmd
+++ b/content/post/2020-11-02-influencing-distributions.Rmd
@@ -12,7 +12,7 @@ thumbnail: /post/2020-11-02-influencing-distributions_files/figure-html/unnamed-
 knitr::opts_chunk$set(echo = FALSE, message = FALSE, warning = FALSE)
 ```
 
-If you have a mechanism available for changing behavior, before applying it you should consider the existing distribution and the potential changes you will cause. In this post, I will use incentives for sales representatives in pricing as my example.
+If you have a mechanism available for changing behavior, before applying it you should consider the existing distribution and the potential changes you will cause. In this post I will use incentives for sales representatives in pricing as my example. All charts are generated using R code (see [Rmarkdown document](https://github.com/brshallo/brshallo/blob/master/content/post/2020-11-02-influencing-distributions.Rmd) on github for code).
 
 For instance, if you have a lever that pushes prices from low to high, using the lever to influence the prices adjacent to the right of the largest parts of the distribution will (likely) make the biggest impact on raising the average price attained. If the starting distribution is normal, this means incentives applied near the lower prices (the tail of the distribution) may have the smallest impact.
 
@@ -34,8 +34,11 @@ data_distribution <- tibble(price = 100:150,
 data_distribution %>% 
   ggplot(aes(x = price, y = dens_scaled))+
   geom_col()+
-  ylim(c(0, 0.15))
+  ylim(c(0, 0.15))+
+  labs(y = "density")
 ```
+
+*Y axis is large in order to be consistent with future, similar charts*
 
 ## Applying Incentives
 
@@ -54,7 +57,8 @@ data_distribution %>%
   ggplot(aes(x = price, y = dens_scaled, fill = initial_quartile))+
   geom_col()+
   scale_fill_discrete(type = c("deeppink", "orange", "yellow2", "royalblue"))+
-  ylim(c(0, 0.15))
+  ylim(c(0, 0.15))+
+  labs(y = "density")
 ```
 
 Applying incentives is likely to lead to a different distribution for future deals. 
@@ -127,7 +131,8 @@ data_distribution %>%
   ggplot(aes(x = price))+
   geom_col(aes(y = dens_adj, fill = initial_quartile))+
   scale_fill_discrete(type = c("deeppink", "orange", "yellow2", "royalblue"))+
-  ylim(c(0, 0.15))
+  ylim(c(0, 0.15))+
+  labs(y = "density")
 ```
 
 Gray bars in the chart below indicate where, in the original distribution, movement will occur.
@@ -144,7 +149,8 @@ data_distribution %>%
   geom_col(aes(y = dens_scaled, fill = initial_quartile))+
   geom_col(aes(y = density_convert), fill = "gray")+
   scale_fill_discrete(type = c("deeppink", "orange", "yellow2", "royalblue"))+
-  ylim(c(0, 0.15))
+  ylim(c(0, 0.15))+
+  labs(y = "density")
 ```
 
 ### Takeaways of Resulting Distribution
