--- a/content/post/2020-11-02-influencing-distributions.Rmd
+++ b/content/post/2020-11-02-influencing-distributions.Rmd
@@ -12,13 +12,15 @@ thumbnail: /post/2020-11-02-influencing-distributions_files/figure-html/unnamed-
 knitr::opts_chunk$set(echo = FALSE, message = FALSE, warning = FALSE)
 ```
 
-If you have a mechanism available for changing behavior, before applying it you should consider the existing distribution and the potential changes you will cause. In this post I will use incentives for sales representatives in pricing as my example. All charts are generated using R code (see [Rmarkdown document](https://github.com/brshallo/brshallo/blob/master/content/post/2020-11-02-influencing-distributions.Rmd) on github for code).
+In this post I will use incentives for sales representatives in pricing to provide examples of factors to consider when attempting to influence an existing distribution. 
 
-For instance, if you have a lever that pushes prices from low to high, using the lever to influence the prices adjacent to the right of the largest parts of the distribution will (likely) make the biggest impact on raising the average price attained. If the starting distribution is normal, this means incentives applied near the lower prices (the tail of the distribution) may have the smallest impact.
+For instance, if you have a lever that pushes prices from low to high, using the lever to influence the prices adjacent to the right of the largest parts of the distribution will (likely, though contingent on a variety of factors) make the biggest impact on raising the average price attained. If the starting distribution is normal, this means incentives applied near the lower prices (the tail of the distribution) may have the smallest impact.
+
+All figures in this post are created using the R programming language (see [Rmarkdown document](https://github.com/brshallo/brshallo/blob/master/content/post/2020-11-02-influencing-distributions.Rmd) on github for code).
 
 # Simple Example
 
-Imagine you have a product that can be sold anywhere from \$100 to \$150. Sales reps want to sell for as high of a price as possible and customers want to purchase for as low of a price as possible. In this tension your product ends-up selling, on average, for \$125 and follows a truncated normal distribution with standard deviation of \$10.
+Imagine you have a product that can be sold anywhere from \$100 to \$150. Sales reps want to sell for as high of a price as possible and customers want to purchase for as low of a price as possible. In this tension your product ends-up selling, on average, for \$125 and follows a truncated normal distribution with standard deviation of \$10^[Limits for Y axis appear too large for this chart but are set from 0 to 0.15 so as to be consistent with similar figures later in post.].
 
 ```{r}
 library(tidyverse)
@@ -38,7 +40,6 @@ data_distribution %>%
   labs(y = "density")
 ```
 
-*Y axis is large in order to be consistent with future, similar charts*
 
 ## Applying Incentives
 
@@ -66,11 +67,11 @@ Applying incentives is likely to lead to a different distribution for future dea
 * *Consider what the relevant factors and assumptions are in influencing the existing distribution. *
 * *Take a moment to hypotheisze what the new distribution will look like after incentives are applied*. 
 
-The resulting distribution after applying incentives is likely to depend on:
+After applying incentives the resulting distribution is likely to depend on:
 
 1. The starting distribution^[or potentially a 'natural' distribution that would exist in the absence of incentives] of deals.
-1. What the incentives are and *how* they influence the distribution. 
-1. How this influence degrades the farther away the starting position of a deal is from a newly incentivized cut-point.
+1. What the incentives are and *how* they influence the initial distribution. 
+1. How this influence degrades the farther away the starting position of a deal is from the next tier up in incentives.
 
 You could paramaterize this problem and model the expected distribution. Making some [Simple Assumptions] (described in the [Appendix]), the chart below shows a (potential) resulting distribution after applying the incentives.
 
@@ -135,7 +136,7 @@ data_distribution %>%
   labs(y = "density")
 ```
 
-Gray bars in the chart below indicate where, in the original distribution, movement will occur.
+Gray bars in the chart below indicate where (on the original distribution) movement to a higher tier will occur.
 ```{r}
 data_distribution %>% 
   mutate(quartile = (cum_dens) %/% 0.2500001 + 1,
@@ -155,7 +156,7 @@ data_distribution %>%
 
 ### Takeaways of Resulting Distribution
 
-The greatest proportion of deals were moved from orange to yellow and from yellow to blue. Pink to orange had the lowest rate of conversion.
+The greatest proportion of deals were moved from orange to yellow and from yellow to blue. Pink to orange had the least amount of movement (due to the first quartile being spread across a wider range).
 ```{r}
 data_distribution %>% 
   mutate(quartile = (cum_dens) %/% 0.2500001 + 1,
@@ -175,11 +176,11 @@ data_distribution %>%
 
 **Incentives Make the Biggest Difference When Nearer to the Largest Parts of the Distribution Suseptible to Change**
 
-Because these incentives slide deals from lower prices to higher prices, those cut-points that are *just above* the largest parts of the distribution have the biggest impacts on the post-incentivized distribution. For a normal distribution, such as this one, that means incentives just to the right of the first quartile have the smallest impact. (Importantly, this assumes suseptibility to change is evenly distributed across the starting distribution.)
+Because these incentives slide deals from lower prices to higher prices, those cut-points that are *just above* the most dense parts of the distribution have the biggest impacts on the post-incentivized distribution. For a normal distribution, such as this one, that means incentives just to the right of the first quartile have the smallest impact. (Importantly, this assumes suseptibility to rightward mobility is evenly distributed across the starting distribution.)
 
 **How Many Thresholds**
 
-For many reasonable assumptions^[Key to this assumption is how incentives degrade as you move farther from a cut-point.], having more thresholds will lead to greater movement upwards in the distribution. A continuous application of incentives (i.e. sales reps get higher compensation for every point they move up on the distribution) can be optimal under certain assumptions as well^[These do not consider potential psychological impacts or difficulty of implementation.].
+For many reasonable assumptions^[Key to this assumption is how incentives degrade as you move farther from a cut-point.], having more thresholds will lead to greater movement upwards in the distribution. Similarly, a continuous application of incentives (i.e. sales reps get higher compensation for every point they move up on the distribution) can be optimal under certain assumptions as well^[These do not consider potential psychological impacts or difficulty of implementation.].
 
 **Quartiles change**
 
@@ -191,17 +192,17 @@ Thresholds for incentives could also be adjusted dynamically. For example based 
 
 Simulating the expected outcome based on assumptions such as the ones described in this post are helpful in thoughtfully elucidating the problem for yourself or for others. Assumptions do not need to be *perfect* to be useful for thinking through the problem but they should lean towards the *actual* patterns in your example. 
 
-**The Way Incentives Aggregate Matters**
+**How do Incentives Aggregate?**
 
 In this case, we are assuming incentives aggregate in a linear way. This means that five 1 ppt incentives have the same amount of influence as one 5 ppt incentive. It could be that the former is more influential (people prefer many small bonuses) or the latter is more influential (people prefer one large bonuses)^[Research into psychological biases suggests the former may be true.]. 
 
 It could also be that there is a 'correct' size of incentive and that too small an incentive makes no difference but a large incentive has diminishing returns. If this is the case a logistic function or other 'S' shaped function may be more reasonable for modeling the influence of incentives.
 
-**The Way Incentives Degrade With Distance From Incentives Matters**
+**How does Influence Degrade With Distance From Incentives?**
 
 In this case, we are assuming the influence of an incentive exponential decays (the influence decreases by 25% for every point we move from the cut-point). Hence being only a few points away from a cut-point has a big impact, but the degradation is less with each point we move away.
 
-**How Slack is Distributed**
+**How is Slack Distributed**
 
 I assumed slack (i.e. the possibility of deals being influenced by incentives) was equally distributed. (It could be that slack is distributed disproportionally towards the lower ends of the distribution for example.)
 
@@ -210,7 +211,6 @@ I assumed slack (i.e. the possibility of deals being influenced by incentives) w
 1. Start with what makes sense (e.g. normal distributions are often good starting places)
 2. Review historical data
 3. Set-up formal tests (e.g. create hypotheses and see how behavior adjusts as you change incentives on random subsets of your sales representatives)
-
 
 # Appendix
 
