minor updates old posts

--- a/content/post/2020-08-11-pricing-insights-from-historical-data-part-1.Rmd
+++ b/content/post/2020-08-11-pricing-insights-from-historical-data-part-1.Rmd
@@ -194,7 +194,7 @@ Stay tuned for [Future pricing posts] on related topics.
 
 ## Pricing challenges
 
-Final price paid by a customer may vary substantially within a given product. This variability is often due in part to a high degree of complexity inherent in the product and different configurations between customers^[A variety of factors though push organizations to simplify their products and this process -- for the purposes of this post though, I'll assume a complicated product portfolio.]. Fluctuations in product demand and macroeconomic factors are other important influences, as are factors associated with the buyer’s / seller’s negotiation skill and ability to use their brand and market information to leverage a higher or lower discount. 
+Final price paid by a customer may vary substantially within a given product. This variability is often due in part to a high degree of complexity inherent in the product and different configurations between customers^[A variety of factors though push organizations to simplify their products and this process -- for the purposes of this post though, I'll assume a complicated product portfolio.]. Fluctuations in product demand and macroeconomic factors are other important influences, as are factors associated with the buyer’s / seller’s negotiation skill and ability to use market information to leverage a higher or lower discount. 
 
 The final price paid may also be influenced by a myriad of competing internal interests. Sales representatives may want leniency in price guidelines so they can hit their quota. Leadership may be concerned about potential brand erosion that often comes with lowering prices. Equity holders may be focused on immediate profitability or may be willing to sacrifice margin in order to expand market share. Effectively setting price guidelines requires the application of various economic, mathematical, and sociological principles^[For a more full discussion on these concepts see UVA coursera specialization on [Cost and Economics in Pricing Strategy]( https://www.coursera.org/learn/uva-darden-bcg-pricing-strategy-cost-economics?utm_source=gg&utm_medium=sem&utm_content=01-CourseraCatalog-DSA-US&campaignid=9918777773&adgroupid=102058276958&device=c&keyword=&matchtype=b&network=g&devicemodel=&adpostion=&creativeid=434544785640&hide_mobile_promo=&gclid=CjwKCAjwsan5BRAOEiwALzomXyDwos6rlUmAwFrv9BjJFUPnyvzPRedArpRD2iRkocMemgtsZrfihxoCjfUQAvD_BwE).] which may not be feasible to set-up^[Organizations may lack the money or the will.]. Implementation of which requires reliable data, which could be lacking due to:
 
@@ -227,7 +227,7 @@ There are also many important *differences* between home sales and B2B sales tha
 
 * in B2B contexts, repeat sales are typically more important than initial sales. In the housing market, repeat sales don't exist.
 * information on home prices and prior home sales is accessible to both the buyer and seller -- meaning there are no options for targeted pricing.
-* in B2B contexts, an influential buyer may be able to leverage their brand name^[While a home seller may be more sympathetic to some buyers over others (E.g. a newly wedded couple looking to start a family over a real-estate mogul looking for investment properties), such preferences likely impact price less than the analogue in the B2B contexts where sellers seek to strike details with popular brands as means of establishing product relevance and enabling further marketing and potentially collaboration opportunities.].
+* in B2B contexts, an influential buyer may be able to leverage the possibility of a partnership of some kind in order to secure a better deal on a large purchase^[While a home seller may be more sympathetic to some buyers over others (E.g. a newly wedded couple looking to start a family over a real-estate mogul looking for investment properties), such preferences likely impact price less than the analogue in the B2B contexts where sellers seek to strike details with popular brands as means of establishing product relevance and enabling further marketing and potentially collaboration opportunities. It is important to note though that the 'Clayton Act' and 'Robinson Patman Act' make price discrimination in B2B contexts illegal (except in certain circumstances).].
 * Volume selling schemes and other pricing strategies may have less of an impact on house prices compared to in B2B settings.
 
 For the notes in this first post, these don't matter.
