--- a/content/post/2020-10-28-idea-for-casino-games-where-the-player-almost-always-win.Rmd
+++ b/content/post/2020-10-28-idea-for-casino-games-where-the-player-almost-always-win.Rmd
@@ -18,9 +18,9 @@ output:
     toc: no
 ---
 
-*In this post, I will describe an example of a game that produces many small wins for the player and occasional large wins for the house. Such a game (theoretically) takes advantage of psychological biases of individuals to prefer gains to be disaggregated and losses to be aggregated as well as a general disposition for accepting small sure-things when it comes to gains and a willingness to chance higher-risk scenarios in order to avoid paying losses.* 
+*In this post, I will describe an example of a game that produces many small wins for the player and occasional large wins for the house. Such a game (theoretically) takes advantage of psychological biases of individuals to prefer gains to be disaggregated and losses to be aggregated^[Picture the pattern of gains and losses in the stock market -- where rises are typically more incremental compared to the steepness of drops.] as well as a general disposition for accepting small sure-things when it comes to gains and a willingness to chance higher-risk scenarios in order to avoid paying losses. An inverse roulette wheel (where the point is not to land on a chosen number) provides a simple example of a game that captures these dynamics^[Imagine Russian Roulette but where the gun is aimed at your wallet (and you get payed each time you dodge the bullet). Credit card roulette perhaps provides a less dramatic examples.].* 
 
-*All ideas described in this post are theoretical and would need to be tested in a gambling / gaming environment. The ideas described are very much in a draft form^[There is a decent chance I misapplied some concepts -- particularly regarding the idea of risk seeking when it comes to losses (e.g. if it's more about seeking uncertainty vs seeking riskiness...). What I describe also seems to run counter to the idea that sporadic positive events help drive repeat behaviors whereas sporadic negative shocks drive avoidance of the activity. Generally I would need to think about and read a little more...].*
+*All proposals described in this post are theoretical and would need to be reviewed in a gambling / gaming environment. The ideas described are very much in a draft form^[There is a decent chance I misapplied some concepts -- particularly regarding the idea of risk seeking when it comes to losses (e.g. if it's more about seeking uncertainty vs seeking riskiness...). What I describe also seems to run counter to the idea that sporadic positive events help drive repeat behaviors whereas sporadic negative shocks drive avoidance of the activity. Generally I would need to think about and read a little more...]. The games discussed align with some psychological biases while potentially running counter to others^[For example people's tendency to underweight rare events and a closer consideration of the importance of reference points are just a few ideas that require closer consideration.] -- reading more on [prospect theory](https://en.wikipedia.org/wiki/Prospect_theory) and related ideas is required to more carefully consider approaches in game design.*
 
 On Wednesday's I co-lead an internal study group on Pricing Strategy. We just finished week four of [Customer Value in Pricing Strategy](https://www.coursera.org/learn/uva-darden-bcg-pricing-strategy-customer-value/home/week/4). The material in this section is devoted almost entirely to the various conditions under which people behave 'irrationally'^[I am also in the middle of reading Khaneman's highly related seminal book "Thinking Fast and Slow".] and how / when a firm can manipulate the psychology of customers to demand a higher price for their products. The subject matter is rife with ethical dilemmas; setting these aside, the material sparked an idea for a new spin on games and gambling.
 
@@ -57,7 +57,7 @@ I thought an interesting set-up for a game would be one that flipped this and ma
 
 As an example, imagine a roulette-like wheel numbered from 1 to 10. You are instructed to pick a number. As long as you *don't* land on that number you will win \$5. If you *do* land on it you will lose \$50 (or something along those lines for whatever size of bet^[one can of course edit the odds to set things appropriately]). This particular bet would yield the casino an expected value of 50 cents[^4]. It also yields the player the excitement of an expected nine wins in a row^[See [thread](https://math.stackexchange.com/questions/1119872/on-average-how-many-times-must-i-roll-a-dice-until-i-get-a-6#:~:text=About%2014%20times%20it%20will,100%20and%20get%20%E2%89%886.) for explanation.]. The advert for the game might focus on the idea of "Tempting Fate[^1]."
 
-[^4]: I imagine casinos have considered setting games like this up and that there are good reasons they don't exist. For example, players have to put up a lot of money to win anything, so the dollars that go to the house per dollar bet is going to be much lower than other games that they could fill their floor space with.
+[^4]: I imagine casinos have considered setting games like this up and that there are good reasons they don't exist. For example, players have to put up a lot of money to win anything, so the dollars that go to the house per dollar bet is going to be much lower than other games that they could fill their floor space with. At least for the examples I go through in thist post... I actually think a bit less of an imbalance would be better, as suggested by [Wallet Roulette] as described in the [Appendix].
 
 [^1]: Many casino games could be redesigned in this manner -- where you are likely to win but always face the risk of a large loss. You might picture a room in the casino that had an 'Upside Down' style feel where all the slots and similar games there were reconstructed accordingly.
     
@@ -68,3 +68,58 @@ You could blend these ideas with other common gaming features. For example, you 
 There are a variety of forms this game could be tested in -- it doesn't have to be a roulette-like wheel in a casino (I actually think an app or more gamefied environment may work better[^3]). *The novel feature is ensuring players get repeated high-likelihood small wins while having them pay their losses in one-off large losses (rather than small incremental payments).*
 
 [^3]: As an example imagine a facsimile of a game where you search fantastical caves for treasure -- you usually find small bits, but occasionally stumble upon a pack of dwarves that rob you. If the game points are translatable into money this represents the same thing. An app environment also helps to divorce the user from the sting of the extreme losses (that come from the design of this type of game).
+
+# Appendix
+
+## Wallet Roulette
+
+*Below I will describe the rules for such a game that I will call "Wallet Roulette"^[or "Russian Wallet Roulette" or some variation on this.]. The game is set-up to look and feel somewhat similar to slots but with a payout structure that is inverted to typical slots games (i.e. the player typically has small wins followed by occasional large losses^[However in the "Game Options" I provide ways by which a player could set their own risk levels (e.g. by filling their gun with more bullets). Hence I also envision the game having a bit more customizability compared to what is typical in slots.]).*
+
+The virtual game is set in a dingy bar-like setting with shady (though cartoonish) figures holding wads of cash in their hands and crowded at the edges of the screen watching you expectantly. A sinister looking bartender / attendant stands behind a counter administers play. 
+
+The game begins when you take a wallet and fill it with some amount of money and place it in front of you. You then take a gun, a revolver, with six chambers in it and point it at your wallet. The round starts when you fill one of the chambers with a bullet, spin the cylinder, wait for the clicking to stop, and pull the trigger. If the gun fires your wallet will explode and the money flies out of it and is scooped up by the shady figures. If it clicks (having landed on an empty chamber) the attendant grimaces and slides some money to you across the counter (this gets added to your account or can be added to your wallet, i.e. your bet). You then decide whether to play another round (filling a new wallet with money if your previous one had exploded) or you take the money out of your current wallet and leave.
+
+For a six-shooter, a \$30 wallet would need to payout less than \$6 for the house to have an advantage. An expected value for the user of $\frac{5}{6}$ to $\frac{11}{12}$ on the dollar could be appropriate (~83.3 to ~91.7 cents for every dollar gambled)^[Slot machines typically hover around a 10 cent on the dollar advantage for the house.]. Hence for a wallet with \$30 there would be a payout of between \$5 and \$5.50 for a miss.  
+
+**Game Options:**
+
+The game options below are some top-of-mind notes regarding features, options, and gameplay for "Wallet Roulette." This is neither a necessary nor exhaustive list. Some of these ideas enhance or modify play more than others. Many of these would need to be tested on players to determine the ideal options to set for the game.  
+
+When describing payout rates for particular game configurations, I stick with the idea of an ~83.3 to ~91.7 cent return on every dollar gambled for the player (so will usually report what the event would look like at each of these payout rates).
+
+* You may be able to add multiple bullets to the chambers, which will increase payouts (along with the risk the player is taking on). 
+    * For example, for the \$30 wallet and a six shooter, adding a second bullet would change the payouts on a miss to be between \$12.50 and \$13.75  (using the previously described payout rates)
+    * There are reasons not to allow for half or greater of the chambers to be filled[^5], but if this is allowed, the other payout rates on a \$30 wallet with a six-shooter would be:
+        * 1 bullet: \$5 to \$5.50
+        * 2 bullets: \$12.50 to \$13.75
+        * 3 bullets: \$25 to \$27.50
+        * 4 bullets: \$50 to \$55
+        * 5 bullets: \$125 to \$137.50
+* Players can also have the option of adding money bullets to the chamber. These bullets (if triggered / landed upon) infuse their wallet with additional cash (i.e. they shoot money *into* their wallet). The catch is that if adding a "money bullet" to the chamber, the player must also add a regular bullet. 
+  * By default triggering a "money bullet" would double the size of the wallet. 
+  * This default behavior though represents a bad deal for the player. Two regular bullets and one "money bullet" in a six-shooter reduces the expected win rate for the player to 75 to 77.5 cents on the dollar (if the 'miss' payout rates are unchanged). 
+  * If we wanted to keep the dollar win rate the same when adding a "money bullet" the bullet would need to be worth more like $\frac{7}{6}$ the value of the wallet (i.e. ~\$35 rather than \$30 in this case) alternatively the value of 'misses' could be increased^[Though this approach seems less appealing.].
+* I am debating whether it makes sense to play where you can see the bullet in the cylinder spinning or if it should be obscured. Being able to see it makes it almost identical to roulette. I kind of like the idea of not being able to see it so that you only know the outcome once the trigger is pulled.
+* Playing with the bullet's position obscured (until the trigger is pulled) would allow for the player to add or take money away from the wallet up until *right before* pulling the trigger (potentially adding suspense and some last second hand-wrangling).
+* Keeping the bullet's position obscured also provides the option to pull the trigger multiple times during a round. The payout rate would go up for each time you pulled the trigger in a round.
+    * It may make sense to have a limitation on the number of times in a round that the trigger can be pulled[^5]. If you do allow multiple trigger pulls here is what the payout would be for each pull within a round (if keeping to previously described payout rates for a six shooter with one bullet in it):
+        * 1st trigger pull: \$5 to \$5.50
+        * 2nd pull: \$6.25 to \$6.80
+        * 3rd pull: \$8.33 to \$9.17
+        * 4th pull: \$12.50 to \$13.75
+        * 5th pull: \$25 to \$27.50
+* As the player plays more they can update their gear for the game. For example they may be able to get... 
+    * a fancier cylinder, handle, trigger, or other part of the gun 
+    * get a different kind of gun
+    * different types of bullets with different types of animations that go with them
+    * a nicer wallet
+    * decals on your gear
+    * Most of these player earned items wouldn't change game outcomes but would simply provide different animations or game stylings.
+    * however they may be able to earn things like "super money bullets" or other accelerators with better payouts than the default behavior (these "super money bullets" may keep the win-rate near $\frac{5}{6}$ rather than making it worse -- as described in the bullet on default "money bullet" behavior above^[Using Prospect Theory lingo, the default "money bullet" option becomes a "dominated" option.]).
+* I am debating whether payouts to the player should default to be payed directly to the player or added to their wallet. I lean towards having the payouts be given directly to the player. The potential advantage of putting them in the wallet is that it increases their bet size. The downside is that if they lose the wallet, the player may be left feeling like they haven't won anything. Hence leaning towards having the payout go to the players account directly.
+* If the game is played in a casino, the dollars in the player's account could be tied to a player card or account with the casino (which they use to fill their wallet for the game). If playing through an application or online it would be tied to their login. The same goes for any gear or other items they've earned as a part of playing (so they keep these items even if they return to play later).
+* You may be able to play with cylinders with different numbers of chambers in them, e.g. sizes of 5, 6, 10. Cylinders with more spots will generally have smaller payouts. My guess is 5 to 9 chambers would be the sweet-spot. People tend to overestimate the likelihood of very rare events, so a cylinder size of 20, 50, etc. would probably be too large^[The animation may also look awkward, as it would be a revolver with a tremendous number of bullets... a tommy gun would almost be more appropriate.] (as the smallness of payouts would not be commensurate with the *perceived* risk the player is taking on).
+* At the start, the player may be able to choose between two types of guns: a standard revolver, or a nerf gun equivalent. Both play the same (but may have slightly different animations when fired). The nerf gun option is just a way of providing options for a player that does not like traditional guns.
+* For cases where the game is played at a casino (rather than through an application), there could be a crank bar or wheel that when interacted with by the player starts the spinning of the virtual gun's cylinder. Once the cylinder stops spinning, there could also be a physical trigger that a player pulls in order to play the round. For a phone or computer application, these parts of the game would be interacted with via touch screen or mouse.
+
+[^5]: As doing so goes against some of the psychological principles of the game (of keeping win-rates high) and risks making the payout rates for the player to be too explicit (when there is an equal likelihood of winning and losing it becomes obvious what the payout rate is... it may be to the houses advantage to keep this obscured). On the otherhand, allowing this may be helpful in that it allows the player to set their risk threshold. On the whole I probably lean towards allowing the players to fill the gun with their wallets as it empowers them to pick their own risk level.
