--- a/content/post/2020-10-28-idea-for-casino-games-where-the-player-almost-always-win.Rmd
+++ b/content/post/2020-10-28-idea-for-casino-games-where-the-player-almost-always-win.Rmd
@@ -77,7 +77,7 @@ There are a variety of forms this game could be tested in -- it doesn't have to 
 
 The virtual game is set in a dingy bar-like setting with shady (though cartoonish) figures holding wads of cash in their hands and crowded at the edges of the screen. They stare at you expectantly. A sinister looking attendant standing behind the bar administers play. 
 
-The game begins when you take a wallet and fill it with money (your bet) and place it in front of you. A gun, a revolver, with six chambers in it is pointed it at your wallet. The round starts when you fill one of the chambers with a bullet, spin the cylinder, wait for the clicking to stop, and pull the trigger. If the gun fires, your wallet explodes and the money flies out and is scooped up by the shady figures. If it clicks (having landed on an empty chamber) the attendant grimaces and slides some money to you across the counter (this gets added to your account or can be added to the wallet, i.e. your bet). You then decide whether to play another round (first filling a new wallet with money if your previous one had exploded) or you take out your money and leave.
+The game begins when you take a wallet and fill it with money (your bet) and place it in front of you. A gun, a revolver, with six chambers in it is pointed at your wallet. The round starts when you fill one of the chambers with a bullet, spin the cylinder, wait for it to come to a rest, and pull the trigger. If the gun fires, your wallet explodes and the money flies out and is scooped up by the shady figures. If it clicks (having landed on an empty chamber) the attendant grimaces and slides some money to you from across the counter^[This gets added to your account or can be added to the wallet, i.e. your bet.]. You then decide whether to play another round (first filling a new wallet with money if your previous one had exploded) or you take out your money and leave.
 
 For a six-shooter, a \$30 wallet would need to payout less than \$6 for the house to have an advantage. An expected value for the user of $\frac{5}{6}$ to $\frac{11}{12}$ on the dollar could be appropriate (~83.3 to ~91.7 cents for every dollar gambled)^[Slot machines typically hover around a 10 cent on the dollar advantage for the house.]. Hence for a wallet filled with \$30 there would be a payout of between \$5 and \$5.50 for a miss.  
 
@@ -102,7 +102,7 @@ When describing payout rates for particular game configurations, I stick with an
 * The bullet in the cylinder can either be shown or obscured (while it is spinning). Being able to see it makes the gameplay feel almost identical to roulette^[An advantage with this is that it may reassure the player by making it appear more fair -- as they can *see* the bullet moving]. I slightly prefer the idea of not being able to see the bullet in the chamber, that way you only know the outcome once the trigger is pulled.
 * Playing with the bullet's position obscured would allow for the player to add or take money away from the wallet up until *right before* pulling the trigger (adding suspense and potentially some last second hand-wringing).
 * Keeping the bullet's position obscured also provides the option to pull the trigger multiple times during a round. The payout rate would go up for each time you pulled the trigger in a round.
-    * It may make sense to have a limitation on the number of times in a round that the trigger can be pulled[^5]. If you do allow multiple trigger pulls, the items below show what the payout would be for each pull within a round (if keeping to previously described payout rates for a six shooter with one bullet in it):
+    * It may make sense to have a limitation on the number of times in a round that the trigger can be pulled[^5]. If you do allow multiple trigger pulls, the items below show what the payout would be for each pull within a round^[If keeping to previously described payout rates for a six shooter with one bullet in it.]:
         * 1st trigger pull: \$5 to \$5.50
         * 2nd pull: \$6.25 to \$6.80
         * 3rd pull: \$8.33 to \$9.17
